--- a/public/notes.html
+++ b/public/notes.html
@@ -1,6 +1,5 @@
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,9 +87,8 @@ i:hover{
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
-     
-      <a href="/api/notes" role="button" class="save-note"><i class="fas fa-save text-light"></i></a>
-      <a role="button"><i class="fas fa-pen text-light new-note"></i></a>
+      <i class="fas fa-save text-light save-note"></i>
+      <i class="fas fa-pen text-light new-note"></i>
     </div>
   </nav>
   <div class="container-fluid">
@@ -108,6 +106,7 @@ i:hover{
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <script src="/assets/js/index.js"></script> -->
   <script>
   var $noteTitle = $(".note-title");
 var $noteText = $(".note-textarea");
@@ -162,7 +161,9 @@ var renderActiveNote = function() {
 
 // Get the note data from the inputs, save it to the db and update the view
 var handleNoteSave = function() {
+  var dateTime=new Date().valueOf();
   var newNote = {
+    id: dateTime,
     title: $noteTitle.val(),
     text: $noteText.val()
   };
