--- a/public/notes.html
+++ b/public/notes.html
@@ -32,10 +32,17 @@
 
       .note-textarea,
       .note-title {
-        color: #000000;
         width: 100%;
         outline: none;
         border: none;
+      }
+
+      .note-title {
+        color: blue;
+      }
+      .note-textarea {
+        color: black;
+        font-size: 20px;
       }
 
       .note-textarea {
@@ -49,11 +56,11 @@
         margin-top: 13px;
         font-size: 3rem;
       }
-
+      /* 
       .note-title:read-only,
       .note-textarea:read-only {
         color: #757575;
-      }
+      } */
 
       .list-container .card {
         height: calc(100vh - 70px);
